# rust-minghu6

./: .gitignore  .rdbgrc.breakpoints  .rustfmt.toml  Cargo.toml  Makefile  README.md  bench  test-unit
algs/: Cargo.toml  Makefile
algs/benches/: bm_compute_delta2.rs  etc.rs  galil_rule_vertification.rs  sa.rs  sorted_vec.rs  spm_dna.rs  spm_natural.rs  sub_palindromes.rs
algs/src/: bloom_filter.rs  lib.rs
algs/src/hash/: mod.rs
algs/src/math/: mod.rs  num.rs
algs/src/sort/: counting_sort.rs  heapsort.rs  merge_sort.rs  mod.rs
algs/src/spm/: ac.rs  b5s.rs  kmp.rs  mod.rs  test.rs
algs/src/string/: ed.rs  hash.rs  mod.rs  zfunction.rs
algs/src/string/palindrome/: find_longest.rs  mod.rs  sub_palindromes.rs
algs/src/string/sa/: mod.rs  sa16.rs  sais.rs
algs/src/string/spm/: ac.rs  ac2.rs  bm.rs  kmp.rs  mod.rs  rk.rs  test.rs
benches/: bloom_filter.rs  bm_compute_delta2.rs  dict.rs  dict_get.rs  dict_insert.rs  dict_insert_remove.rs  dict_lookup.rs  dict_remove.rs  galil_rule_vertification.rs  heap.rs  mst.rs  nothing.rs  pvec_assoc.rs  pvec_pop.rs  pvec_push.rs  sa.rs  sorted_vec.rs  sp.rs  spm_bench.rs  spm_dna.rs  spm_natural.rs
coll/: Cargo.toml  Makefile
coll/benches/: fractional_cascading_bench.rs  segment_tree_bench.rs
coll/src/: aux.rs  beyond_god.rs  easycoll.rs  frac_casc.rs  lib.rs  ptr.rs  segment_tree.rs  union_find.rs  unpack.rs
coll/src/fenwick_tree/: mod.rs  tests.rs
coll/src/segment_tree/: mod.rs  stats.rs  tests.rs
coll_graph/: Cargo.toml  Makefile
coll_graph/benches/: cc_bench.rs  mst.rs  mst_bench.rs  sp.rs  sp_bench.rs
coll_graph/src/: bcc.rs  lib.rs  mst.rs  scc.rs  sp.rs  toposort.rs
coll_graph/src/benches/: mod.rs  mst.rs  sp.rs
coll_graph/src/test/: mod.rs  path.rs  sp.rs  verify.rs
coll_graph/src/tree/: diameter.rs  hpd.rs  lca.rs  mod.rs
coll_heap/: Cargo.toml  Makefile
coll_heap/benches/: heap.rs  heap_bench.rs
coll_heap/src/: dary.rs  fib.rs  lib.rs  sdary.rs
coll_persistent/: Cargo.toml  Makefile
coll_persistent/benches/: pvec_assoc.rs  pvec_pop.rs
coll_persistent/src/: lib.rs  obsoleted_rrb.rs  obsoleted_trievec.rs  trievec.rs  trievec0.rs  trievec2.rs  vec.rs
coll_persistent/src/vector/: mod.rs  trie.rs
coll_st/: Cargo.toml  Makefile
coll_st/benches/: dict_all.rs  dict_bulk_build.rs  dict_common.rs  dict_get.rs  dict_insert.rs  dict_insert_remove.rs  dict_range.rs  dict_remove.rs
coll_st/src/: lib.rs
coll_st/src/benches/: dict_get.rs  dict_insert.rs  dict_remove.rs
coll_st/src/bst/: aa.rs  avl.rs  lsg.rs  mod.rs  rb.rs  sg.rs  splay.rs  treap.rs
coll_st/src/bt/: bpt.rs  bpt2.rs  bpt3.rs  bt.rs  flatbpt.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  rand.rs  timeit.rs  trait.rs  traits.rs  util.rs  utils.rs
cusbenches/bp_remove/: Cargo.toml
cusbenches/bp_remove/src/: main.rs
cusbenches/bsearch_bench/: Cargo.toml
cusbenches/bsearch_bench/src/: main.rs
cusbenches/pvec_bench/: Cargo.toml
customized_benches/pvec_bench/src/: lib.rs  main.rs
macros_gen/: Cargo.toml
macros_gen/src/: lib.rs
math/: Cargo.toml
math/benches/: number_bench.rs
math/src/: lib.rs  number.rs
math/src/number/: mod.rs  prime_sieves.rs
proc_macros/: Cargo.toml
proc_macros/src/: duck_typing_impl.rs  lib.rs  resources.rs
res/: zh_en_poems.txt
res/test_suites/: bpt.toml  mutable_mapping.toml
resource_config/: Cargo.toml
resource_config/src/: lib.rs
src/: collections.rs  error_code.rs  float.rs  int.rs  io.rs  lib.rs  path.rs  text.rs
src/algs/: ac.rs  bm.rs  horspool.rs  kmp.rs  mod.rs  utils.rs
src/algs/hash/: mod.rs
src/algs/math/: mod.rs  num.rs
src/algs/sort/: counting_sort.rs  heapsort.rs  merge_sort.rs  mod.rs
src/algs/spm/: ac.rs  b5s.rs  bm.rs  bm_badimpl.rs  horspool.rs  kmp.rs  mod.rs  sa.rs  sa16.rs  sais.rs  sunday.rs  test.rs  z.rs  zfunction.rs
src/benchmarks/: spm.rs
src/collections/: aux.rs  bloom_filter.rs  easycoll.rs  key_hash_set.rs  mod.rs  union_find.rs
src/collections/bare/: array.rs  mod.rs
src/collections/bst/: avl.rs  avl_abandoned.rs  mod.rs
src/collections/bst2/: aa.rs  avl.rs  lsg.rs  mod.rs  rb.rs  sg.rs  splay.rs  treap.rs
src/collections/bt/: b3.rs  b4.rs  bstar4.rs  mod.rs
src/collections/bt/bst/: aa.rs  avl.rs  llrb.rs  lsg.rs  mod.rs  rawst.rs  rb.rs  splay.rs  treap.rs
src/collections/bt2/: bpt.rs  bpt2.rs  bt.rs  mod.rs
src/collections/compact/: bytes_set.rs  mod.rs
src/collections/graph/: mod.rs  mst.rs  scc.rs  sp.rs  toposort.rs  tree.rs
src/collections/graph/tree/: diameter.rs  hpd.rs  lca.rs  mod.rs
src/collections/heap/: dary.rs  fib.rs  mod.rs  sfib.rs
src/collections/persistent/: list.rs  mod.rs  vector.rs
src/collections/persistent/vector/: mod.rs  raw.rs  rrb.rs  trie.rs
src/etc/: mod.rs  path.rs  timeit.rs  utf16.rs  utf8.rs  utfx.rs
src/io/: mod.rs
src/test/: dict.rs  graph.rs  hash.rs  heap.rs  mod.rs  sort.rs  spm.rs
src/test/persistent/: mod.rs
src/test/utils/: mod.rs
src/unicode/: mod.rs  utf16.rs  utf8.rs
test_suites/: Cargo.toml  README.md
test_suites/src/: collections_abc.rs  lib.rs  loader.rs  mapping.rs  rand.rs  test_suite.rs
test_suites/src/suites/: bpt_mapping.rs  mapping.rs  mod.rs
tests/: collections_test.rs  key_hash_set_test.rs  text_test.rs
tools/: graph.rs  lc.rs  lca.rs  lco.rs  pkcheat.rs  read.rs
tools/guess-num/: Cargo.toml
tools/guess-num/src/: main.rs
