[package]
name = "minghu6"
version = "0.1.0"
authors = ["minghu6 <a19678zy@163.com>"]
edition = "2021"


[dependencies]
chardet = "^0.2"
encoding = "^0.2"

m6coll = { path = "../m6coll" }
proc_macros = { package = "m6-proc-macros", path = "proc_macros" }
common = { package = "m6-common", path = "common" }
algs = { package = "m6-algs", path = "algs" }
coll = { package = "m6-coll", path = "coll" }
coll_graph = { package = "m6-coll-graph", path = "coll_graph" }
coll_persistent = { package = "m6-coll-persistent", path = "coll_persistent" }
coll_heap = { package = "m6-coll-heap", path = "coll_heap" }
coll_st = { package = "m6-coll-st", path = "coll_st" }


[dev-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
configparser = { version = "3.0", features = ["indexmap"] }

serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
walkdir = "2.3"


[features]
tprofile = []

[workspace]
members = [
    "proc_macros",
    "common",
    "algs",
    "coll",
    "coll_graph",
    "coll_persistent",
    "coll_heap",
    "coll_st"
]


# [profile.bench]
# debug = true


[profile.release]
debug = true

# [[bin]]
# name = "srcstats"
# path = "tools/lc.rs"

# [[bin]]
# name = "lca"
# path = "tools/lca.rs"

# [[bin]]
# name = "lco"
# path = "tools/lco.rs"

# [[bin]]
# name = "read"
# path = "tools/read.rs"

# [[bin]]
# name = "pkcheat"
# path = "tools/pkcheat.rs"

# [[bin]]
# name = "graph"
# path = "tools/graph.rs"
