[package]
name = "minghu6"
version = "0.1.18"
authors = ["minghu6 <a19678zy@163.com>"]
edition = "2024"


[dependencies]
chardet = "^0.2"
encoding = "^0.2"

binpack = { package = "m6binpack", path = "../binpack/m6binpack" }
m6coll = { path = "../m6coll" }
proc_macros = { package = "m6-proc-macros", path = "proc_macros" }
common = { package = "m6-common", path = "common" }
algs = { package = "m6-algs", path = "algs" }
math = { package = "m6-math", path = "math" }
coll = { package = "m6-coll", path = "coll" }
coll_graph = { package = "m6-coll-graph", path = "coll_graph" }
coll_persistent = { package = "m6-coll-persistent", path = "coll_persistent" }
coll_heap = { package = "m6-coll-heap", path = "coll_heap" }
coll_st = { package = "m6-coll-st", path = "coll_st" }


[dev-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
configparser = { version = "3.0", features = ["indexmap"] }

serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"

futures = "0.3"
walkdir = "2.3"

resource_config = { package = "m6-resource-config", path = "resource_config"}

[workspace]
members = [
    "proc_macros",
    "common",
    "algs",
    "math",
    "coll",
    "coll_graph",
    "coll_persistent",
    "coll_heap",
    "coll_st",
    "test_suites", "resource_config",
]


[profile.release]
debug = true

[[example]]
name = "srcstats"
path = "tools/lc.rs"
