[package]
name = "m6-coll"
version = "0.2.1"
edition = "2021"

[dependencies]
paste = "1.0"

m6arr = { path = "../../m6coll/m6arr" }
m6entry = { path = "../../m6coll/m6entry" }

common = { package = "m6-common", path = "../common" }
math = { package = "m6-math", path = "../math" }


[dev-dependencies]
lazy_static = "1.4.0"


[package.metadata.workspaces]
independent = true
