[package]
name = "m6-coll"
version = "0.3.5"
edition = "2024"

[dependencies]
paste = "1.0"
derive_more = { version = "1.0.0", features = ["add", "add_assign"]}

m6arr = { path = "../../m6coll/m6arr" }
m6entry = { path = "../../m6coll/m6entry" }
m6ptr = { path = "../../m6coll/m6ptr" }


common = { package = "m6-common", path = "../common" }
math = { package = "m6-math", path = "../math" }

[dev-dependencies]
lazy_static = "1.4.0"


[package.metadata.workspaces]
independent = true
