[package]
name = "m6-coll-graph"
version = "0.2.0"
edition = "2021"

[dependencies]
indexmap = "1"

common = { package = "m6-common", path = "../common" }
coll = { package = "m6-coll", path = "../coll" }
coll_heap = { package = "m6-coll-heap", path = "../coll_heap" }

[dev-dependencies]
lazy_static = "1.4.0"
csv = "1.1"
