[package]
name = "m6-coll-graph"
version = "0.1.9"
edition = "2021"

[dependencies]
indexmap = "1"
csv = "1.1"

common = { package = "m6-common", path = "../common" }
coll = { package = "m6-coll", path = "../coll" }
coll_heap = { package = "m6-coll-heap", path = "../coll_heap" }

[dev-dependencies]
lazy_static = "1.4.0"

resource_config = { package = "m6-resource-config", path = "../resource_config" }

[package.metadata.workspaces]
independent = true
