[package]
name = "m6-coll-st"
version = "0.1.7"
edition = "2024"

[dependencies]
common = { package = "m6-common", path = "../common" }
coll = { package = "m6-coll", path = "../coll" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.5"
indexmap = "1"
lazy_static = "1.4.0"
rand = { package = "rand", version = "^0.8" }

test_suites = { package = "test-suites", path = "../test_suites" }

[package.metadata.workspaces]
independent = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tprofile)'] }
