[package]
name = "m6-math"
version = "0.2.5"
edition = "2024"


[dependencies]
bit-vec = "^0.6.2"
lazy_static = "1.4.0"


[dev-dependencies]
common = { package = "m6-common", path = "../common" }
bag = { package = "m6bag", path = "../../m6coll/m6bag" }
derive-where = "1.2.7"
derive-new = "0.7"

[package.metadata.workspaces]
independent = true
