[package]
name = "m6-proc-macros"
version = "0.1.3"
edition = "2018"


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
derive-syn-parse = "0.2.0"
paste = "1"
derive-quote-to-tokens = "0.1.1"
either = "1.13"
convert_case = "0.6"

[lib]
proc-macro = true

[package.metadata.workspaces]
independent = true
