[package]
name = "test-suites"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1", features = ["from_str"]}
extern_rand = { package = "rand", version = "0.8" }
log = "0.4"
pretty_env_logger = "0.5"

m6entry = { path = "../../m6coll/m6entry" }

resource_config = { package = "m6-resource-config", path = "../resource_config"}

