[package]
name = "guess-num"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
shadow-rs = "0.8"
rand = "0.7"
minghu6 = { path = "../../" }
# concolor = { git = "https://github.com/rust-cli/concolor.git", branch = "main" }
concolor-clap = "0.0.9"
concolor = "0.0.8"

[build-dependencies]
shadow-rs = "0.8"

