[package]
name = "guess-num"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "^3", features = ["derive"] }
shadow-rs = "0.8"
rand = "0.7"
minghu6 = { path = "../../" }
# concolor = { git = "https://github.com/rust-cli/concolor.git", branch = "main" }
concolor-clap = "0.0.9"
concolor = "0.0.8"

[build-dependencies]
shadow-rs = "0.8"

